compiler/cli/tests/codegen/snapshots/integration_tests__codegen__ast_prog1.snap
---
source: compiler/cli/tests/codegen/mod.rs
expression: ast1
---
Program {
    decls: [
        FnDecl(
            FnDecl {
                name: "add",
                receiver: None,
                params: [
                    Param {
                        name: "a",
                        type_ann: Basic(
                            "int",
                        ),
                        default_value: None,
                    },
                    Param {
                        name: "b",
                        type_ann: Basic(
                            "int",
                        ),
                        default_value: None,
                    },
                ],
                return_type: Some(
                    Basic(
                        "int",
                    ),
                ),
                body: Block {
                    stmts: [
                        Return(
                            Some(
                                BinExpr {
                                    left: Ident(
                                        "a",
                                    ),
                                    op: Add,
                                    right: Ident(
                                        "b",
                                    ),
                                },
                            ),
                        ),
                    ],
                },
            },
        ),
    ],
}
