compiler/cli/tests/codegen/snapshots/integration_tests__codegen__hello_world_ir.snap
---
source: compiler/cli/tests/codegen/mod.rs
expression: ir
---
@.str.0 = private unnamed_addr constant [12 x i8] c"hello world\00", align 1

declare void @n0_show_string(ptr)
declare void @n0_panic(ptr)
declare void @n0_show_int(i64)
declare void @n0_show_float(double)
declare ptr @n0_c_alloc(i64)
declare void @n0_c_store_int(ptr, i64, i64)
declare void @n0_c_store_string(ptr, i64, ptr)
declare i64 @n0_c_load_int(ptr, i64)
declare ptr @n0_c_load_string(ptr, i64)
declare ptr @n0_c_interpolate(ptr, ptr)
declare ptr @n0_int_to_string(i64)
declare ptr @n0_float_to_string(double)
declare ptr @n0_bool_to_string(i64)
declare void @n0_show_bool(i64)
declare ptr @n0_string_concat(ptr, i32)
declare i64 @n0_c_argc()
declare ptr @n0_c_argv(i64)
declare double @pow(double, double)
declare ptr @n0_make_some(i64)
declare ptr @n0_make_none()
declare ptr @n0_make_ok(i64)
declare ptr @n0_make_err(ptr)
declare void @n0_show_err(ptr)
declare ptr @n0_io_read_line()
declare ptr @n0_fs_read(ptr)
declare ptr @n0_fs_write(ptr, ptr)
declare i1 @n0_fs_exists(ptr)
declare ptr @n0_fs_delete(ptr)
declare ptr @n0_fs_mkdir(ptr)
declare ptr @n0_fs_list(ptr)
declare ptr @n0_json_encode_string(ptr)
declare ptr @n0_json_encode_int(i64)
declare ptr @n0_json_encode_float(double)
declare ptr @n0_json_encode_bool(i64)
declare ptr @n0_json_encode_list(ptr)
declare ptr @n0_json_encode_map(ptr)
declare ptr @n0_json_decode(ptr)
declare ptr @n0_http_get(ptr)
declare ptr @n0_http_post(ptr, ptr)
declare i64 @n0_str_len(ptr)
declare i64 @n0_str_contains(ptr, ptr)
declare i64 @n0_str_starts_with(ptr, ptr)
declare i64 @n0_str_ends_with(ptr, ptr)
declare ptr @n0_str_upper(ptr)
declare ptr @n0_str_lower(ptr)
declare ptr @n0_str_trim(ptr)
declare ptr @n0_str_split(ptr, ptr)
declare ptr @n0_str_replace(ptr, ptr, ptr)
declare ptr @n0_str_slice(ptr, i64, i64)
declare ptr @n0_str_to_int(ptr)
declare ptr @n0_str_to_float(ptr)
declare void @n0_bounds_check(ptr, i64, ptr, i64)
declare i64 @n0_list_len(ptr)
declare ptr @n0_list_map(ptr, ptr)
declare ptr @n0_list_filter(ptr, ptr)
declare i64 @n0_list_reduce(ptr, i64, ptr)
declare ptr @n0_list_find(ptr, ptr)
declare i64 @n0_list_any(ptr, ptr)
declare i64 @n0_list_all(ptr, ptr)
declare void @n0_list_push(ptr, i64)
declare ptr @n0_list_pop(ptr)
declare i64 @n0_list_contains_int(ptr, i64)
declare i64 @n0_list_contains_str(ptr, ptr)
declare ptr @n0_list_first(ptr)
declare ptr @n0_list_last(ptr)
declare ptr @n0_map_get(ptr, ptr)
declare void @n0_map_set(ptr, ptr, i64)
declare i64 @n0_map_has(ptr, ptr)
declare ptr @n0_map_keys(ptr)
declare ptr @n0_map_values(ptr)
declare void @n0_map_delete(ptr, ptr)
declare double @n0_int_to_float(i64)
declare i64 @n0_float_to_int(double)
declare i32 @strcmp(ptr, ptr)

@global_argc = external global i32
@global_argv = external global ptr

define i32 @main(i32 %argc, ptr %argv) {
entry:
    store i32 %argc, ptr @global_argc, align 4
    store ptr %argv, ptr @global_argv, align 8
    %t1 = getelementptr inbounds [12 x i8], ptr @.str.0, i64 0, i64 0
    call void @n0_show_string(ptr %t1)
    ret i32 0
}
