compiler/cli/tests/codegen/snapshots/integration_tests__codegen__lexer_token_stream_prog2.snap
---
source: compiler/cli/tests/codegen/mod.rs
expression: tokens2
---
[
    Token {
        kind: Task,
        line: 1,
        column: 1,
    },
    Token {
        kind: Ident(
            "loop",
        ),
        line: 1,
        column: 6,
    },
    Token {
        kind: Newline,
        line: 1,
        column: 10,
    },
    Token {
        kind: Indent,
        line: 2,
        column: 1,
    },
    Token {
        kind: Ident(
            "x",
        ),
        line: 2,
        column: 5,
    },
    Token {
        kind: Eq,
        line: 2,
        column: 7,
    },
    Token {
        kind: Number(
            3,
        ),
        line: 2,
        column: 9,
    },
    Token {
        kind: Newline,
        line: 2,
        column: 10,
    },
    Token {
        kind: While,
        line: 3,
        column: 5,
    },
    Token {
        kind: Ident(
            "x",
        ),
        line: 3,
        column: 11,
    },
    Token {
        kind: Gt,
        line: 3,
        column: 13,
    },
    Token {
        kind: Number(
            0,
        ),
        line: 3,
        column: 15,
    },
    Token {
        kind: Newline,
        line: 3,
        column: 16,
    },
    Token {
        kind: Indent,
        line: 4,
        column: 1,
    },
    Token {
        kind: If,
        line: 4,
        column: 9,
    },
    Token {
        kind: Ident(
            "x",
        ),
        line: 4,
        column: 12,
    },
    Token {
        kind: EqEq,
        line: 4,
        column: 14,
    },
    Token {
        kind: Number(
            2,
        ),
        line: 4,
        column: 17,
    },
    Token {
        kind: Newline,
        line: 4,
        column: 18,
    },
    Token {
        kind: Indent,
        line: 5,
        column: 1,
    },
    Token {
        kind: Break,
        line: 5,
        column: 13,
    },
    Token {
        kind: Newline,
        line: 5,
        column: 18,
    },
    Token {
        kind: Dedent,
        line: 6,
        column: 1,
    },
    Token {
        kind: Ident(
            "x",
        ),
        line: 6,
        column: 9,
    },
    Token {
        kind: Eq,
        line: 6,
        column: 11,
    },
    Token {
        kind: Ident(
            "x",
        ),
        line: 6,
        column: 13,
    },
    Token {
        kind: Minus,
        line: 6,
        column: 15,
    },
    Token {
        kind: Number(
            1,
        ),
        line: 6,
        column: 17,
    },
    Token {
        kind: Newline,
        line: 6,
        column: 18,
    },
    Token {
        kind: Dedent,
        line: 7,
        column: 1,
    },
    Token {
        kind: Dedent,
        line: 7,
        column: 1,
    },
    Token {
        kind: Eof,
        line: 7,
        column: 1,
    },
]
